actualizacion menu y centros educativo

--- a/src/app/centroeducativo/alumno/alumno.page.html
+++ b/src/app/centroeducativo/alumno/alumno.page.html
@@ -20,10 +20,21 @@
     <!--Busqueda y filtrado de alumnos-->
     <ion-searchbar id="searchempresa" placeholder="Buscar" animated (ionChange)="handleChange($event)"></ion-searchbar>
     <!--Botón para agregar un nuevo alumno-->
-    <ion-button (click)="nuevoalumno()" style="--background: #141414; zoom:1.25"><ion-icon name="duplicate-outline"
-        style="color: white;"></ion-icon></ion-button>
+    <ion-button (click)="nuevoalumno()" style=" zoom:1.25"><ion-icon name="duplicate-outline"></ion-icon></ion-button>
   </div>
-  <!--Lista de objetos de tipo alumno que al seleccionar un "ion-card" se abra un modal con el contenido de ese alumno en concreto-->
+<!--Lista de objetos de tipo alumno que al seleccionar un "ion-card" se abra un modal con el contenido de ese alumno en concreto-->
+<div id="divlist" *ngIf="permision">
+<ion-list class="list">
+    <ion-item  *ngFor="let lista of this.filter;let i=index" (click)="this.editalumno(lista)">
+      <ion-img class="image" style="border-radius: 100%;" *ngIf="lista.imagen!=null" src={{lista.imagen}}></ion-img>
+      <ion-icon class="icn" style="border-radius: 100%;" style="border-radius: 100%;" *ngIf="lista.imagen==null"
+        name="person-outline"></ion-icon>
+        <h4> <ion-label>{{lista.nombre}}</ion-label>
+          <ion-label>Correo: {{lista.correo}}</ion-label>
+        </h4>
+    </ion-item>
+  </ion-list>
+</div> 
     <!--
   <div id="divlist" *ngIf="permision">
     <ion-card id="open-modal" *ngFor="let lista of this.filter;let i=index" (click)="this.editalumno(lista)">
@@ -36,21 +47,4 @@
     </ion-card>
   </div>
   -->
-  <ion-list class="list">
-    <ion-item  *ngFor="let lista of this.filter;let i=index" (click)="this.editalumno(lista)">
-      <div>
-        <ion-img class="image" style="border-radius: 100%;" *ngIf="lista.imagen!=null" src={{lista.imagen}}></ion-img>
-      </div>
-      <ion-icon class="icn" style="border-radius: 100%;" style="border-radius: 100%;" *ngIf="lista.imagen==null"
-        name="person-outline"></ion-icon>
-      <div>
-        <div>
-          <ion-label>{{lista.nombre}}</ion-label>
-        </div>
-        <div>
-          <ion-label>{{lista.correo}}</ion-label>
-        </div>
-      </div>
-    </ion-item>
-  </ion-list>
 </ion-content>
