--- a/src/app/centroeducativo/alumno/alumno.page.scss
+++ b/src/app/centroeducativo/alumno/alumno.page.scss
@@ -1,3 +1,48 @@
+#divsearch {
+  display: flex;
+  flex-direction: row;
+}
+
+img {
+  width: 150px;
+  height: 150px;
+}
+
+ion-list {
+  ion-item {
+    border-radius: 6px; 
+    margin: 3px;
+    &:hover {
+      cursor: pointer; 
+      ion-label{
+        color:#2dbfd3;
+      }
+    }
+  }
+  &:hover {
+    border-radius: 6px;
+  }
+}
+
+.list {
+  margin-top: 18px;
+}
+
+.image{
+  width: 100px; /* ancho deseado */
+  height: 100px; /* altura deseada */
+  mask-image: radial-gradient(circle, white 100%, transparent 100%,); /* crea una máscara circular */
+}
+
+.icn{
+  width: 100px; /* ancho deseado */
+  height: 100px; /* altura deseada */
+  mask-image: radial-gradient(circle, white 100%, transparent 100%,); /* crea una máscara circular */
+}
+
+
+
+/*
 ion-card {
   display: flex;
   flex-wrap: wrap;
@@ -14,16 +59,6 @@ ion-card {
   align-content: center;
   align-items: center;
   width: 100%;
-}
-
-#divsearch {
-  display: flex;
-  flex-direction: row;
-}
-
-img {
-  width: 150px;
-  height: 150px;
 }
 
 .insideDiv {
@@ -51,3 +86,4 @@ img {
     width: 100%;
   }
 }
+*/
