--- a/src/app/centroeducativo/empresa/empresa.page.scss
+++ b/src/app/centroeducativo/empresa/empresa.page.scss
@@ -1,3 +1,46 @@
+#divsearch {
+  display: flex;
+  flex-direction: row;
+}
+
+img {
+  width: 150px;
+  height: 150px;
+}
+
+ion-list {
+  ion-item {
+    border-radius: 6px; 
+    margin: 3px;
+    &:hover {
+      cursor: pointer; 
+      ion-label{
+        color:#2dbfd3;
+      }
+    }
+  }
+  &:hover {
+    border-radius: 6px;
+  }
+}
+
+.list {
+  margin-top: 18px;
+}
+
+.image{
+  width: 100px; /* ancho deseado */
+  height: 100px; /* altura deseada */
+  mask-image: radial-gradient(circle, white 100%, transparent 100%,); /* crea una máscara circular */
+}
+
+.icn{
+  width: 100px; /* ancho deseado */
+  height: 100px; /* altura deseada */
+  mask-image: radial-gradient(circle, white 100%, transparent 100%,); /* crea una máscara circular */
+}
+
+/*
 ion-card {
   display: flex;
   flex-wrap: wrap;
@@ -16,16 +59,6 @@ ion-card {
   width: 100%;
 }
 
-#divsearch {
-  display: flex;
-  flex-direction: row;
-}
-
-img {
-  width: 150px;
-  height: 150px;
-}
-
 .insideDiv {
   position: absolute;
   top: 50%;
@@ -34,6 +67,7 @@ img {
   width: 10px;
   height: 10px;
 }
+*
 
 @media only screen and (max-width:320px) {
   ion-card {
@@ -51,3 +85,4 @@ img {
     width: 100%;
   }
 }
+*/
