--- a/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
+++ b/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
@@ -11,30 +11,48 @@
         <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()">
         </ion-toggle>
       </ion-item>
-      </ion-buttons>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <div id="divsearch">
     <!--Busqueda y filtrado de periodos de practicas-->
     <ion-searchbar id="searchpp" placeholder="Buscar" animated (ionChange)="handleChange($event)"></ion-searchbar>
     <!--Botón para agregar un nuevo periodo de practicas-->
-    <ion-button (click)="nuevaPractica()"style="--background: #141414; zoom:1.25"><ion-icon name="duplicate-outline" style="color: white;"></ion-icon></ion-button>
+    <ion-button (click)="nuevaPractica()" style="--background: #141414; zoom:1.25"><ion-icon name="duplicate-outline"
+        style="color: white;"></ion-icon></ion-button>
   </div>
-
+  <div id="divlist">
+    <ion-list lines="inset">
+      <ion-item class="listItems" id="open-modal" expand="block" *ngFor="let lista of this.filter;let i=index "
+        (click)="this.editPractica(lista)">
+        <ion-label>
+          {{lista.id_empresa?.nombre}}
+        </ion-label>
+        <ion-label>
+          {{lista.id_alumno?.nombre}}
+        </ion-label>
+        <ion-label>
+          {{lista.tiempo_inicio |date : 'd MMM, y'}}
+        </ion-label>
+        <ion-label>
+          {{lista.tiempo_final |date : 'd MMM, y'}}
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </div>
   <!--Lista de objetos de tipo periodos de practicas que al seleccionar un "ion-card" se abra un modal con el contenido de este periodo de practicas en concreto-->
+  <!--
   <div id="divlist">
     <ion-card id="open-modal" *ngFor="let lista of this.filter;let i=index" (click)="this.editPractica(lista)">
-      <ion-img *ngIf="lista.imagen!=null" src={{lista.imagen}}></ion-img>
       <ion-icon *ngIf="lista.imagen==null" name="person-outline" style="zoom:10"></ion-icon>
       <ion-card-header>
         <ion-card-title> {{lista.id_empresa?.nombre}}</ion-card-title>
         <h4>{{lista.id_alumno?.nombre}}</h4>
         <ion-card-subtitle> {{lista.tiempo_inicio |date : 'd MMM, y'}}</ion-card-subtitle>
         <ion-card-subtitle> {{lista.tiempo_final |date : 'd MMM, y'}}</ion-card-subtitle>
-
       </ion-card-header>
     </ion-card>
   </div>
+  -->
 </ion-content>
