--- a/src/app/centroeducativo/titulo/titulo.page.html
+++ b/src/app/centroeducativo/titulo/titulo.page.html
@@ -23,8 +23,8 @@
     <ion-button (click)="this.addTittle()" style="--background: #141414; zoom:1.25"><ion-icon name="duplicate-outline" style="color: white;"></ion-icon></ion-button>
   </div>
 <!--Lista de objetos de tipo título que al seleccionar un "ion-item" pasa a la siguiente ventana en el que muestra los módulos de este título en concreto-->
-  <ion-list lines="inset" *ngFor="let listaTittle of this.filter;let i=index">
-    <ion-item class="listItems" id="open-modal" expand="block" >
+  <ion-list lines="inset">
+    <ion-item class="listItems" id="open-modal" expand="block" *ngFor="let listaTittle of this.filter;let i=index">
       <ion-label (click)="navToModule(listaTittle)">
         <h1>{{listaTittle.nombre}}</h1>
       </ion-label>
@@ -35,5 +35,4 @@
       </ion-buttons>
     </ion-item>
   </ion-list>
-
 </ion-content>
