--- a/src/app/pages/ce-practices-edit/ce-practices-edit.page.html
+++ b/src/app/pages/ce-practices-edit/ce-practices-edit.page.html
@@ -14,7 +14,7 @@
     <ion-list>
       <ion-item>
         <ion-label position="floating">Empresa</ion-label>
-        <ion-select #selectBusiness interface="popover" placeholder="Selecciona empresa">
+        <ion-select #selectBusiness formControlName="id_empresa" interface="popover" placeholder="Selecciona empresa">
           <ion-select-option *ngFor="let listaE of this.listEmp;let i=index " [value]="listaE.id">{{listaE.nombre}}</ion-select-option>
         </ion-select>
       </ion-item>
@@ -23,7 +23,7 @@
     <ion-list>
       <ion-item>
         <ion-label position="floating">Alumno</ion-label>
-        <ion-select #selectAlumn interface="popover" placeholder="Selecciona alumno">
+        <ion-select #selectAlumn interface="popover" formControlName="id_alumno" placeholder="Selecciona alumno">
           <ion-select-option *ngFor="let listaA of this.listAlu;let i=index" [value]="listaA.id">{{listaA.nombre}}</ion-select-option>
         </ion-select>
       </ion-item>
@@ -35,7 +35,7 @@
         <ion-modal [keepContentsMounted]="true">
           <ng-template>
             <ion-datetime presentation="date" id="finicio" formControlName="tiempo_inicio"
-              displayFormat="YYYY-MM-DDTHH:mm:ss.SSSZ" (ionChange)="onDateChange($event)"></ion-datetime>
+              displayFormat="YYYY-MM-DDTHH:mm:ss.SSSZ" (ionChange)="onDateChange($event)" [value]="tiempoInicioValue"></ion-datetime>
           </ng-template>
         </ion-modal>
       </ion-datetime-button>
@@ -47,7 +47,7 @@
         <ion-modal [keepContentsMounted]="true">
           <ng-template>
             <ion-datetime presentation="date" id="ffin" formControlName="tiempo_final"
-              displayFormat="YYYY-MM-DDTHH:mm:ss.SSSZ" (ionChange)="onDateChange($event)"></ion-datetime>
+              displayFormat="MM-DD-YYYY-THH:mm:ss.SSSZ" (ionChange)="onDateChange($event)"></ion-datetime>
           </ng-template>
         </ion-modal>
       </ion-datetime-button>
