--- a/src/app/centroeducativo/modulo/modulo.page.html
+++ b/src/app/centroeducativo/modulo/modulo.page.html
@@ -7,14 +7,6 @@
       </ion-button>
     </ion-buttons>
     <ion-title>Módulos de {{tittleName}} </ion-title>
-    <ion-buttons slot="end">
-      <ion-item>
-        <ion-icon slot="start" name="moon"></ion-icon>
-        <!--Botón que permite cambiar de tema-->
-        <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()">
-        </ion-toggle>
-      </ion-item>
-      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -23,7 +15,9 @@
     <!--Busqueda y filtrado de modulos-->
     <ion-searchbar id="searchmodulo" placeholder="Buscar" animated (ionChange)="handleChange($event)"></ion-searchbar>
     <!--Botón para agregar una nuevo módulo-->
-    <ion-button (click)="this.addModul()" style="--background: #141414; zoom:1.25"><ion-icon name="duplicate-outline"></ion-icon></ion-button>
+    <ion-button (click)="this.addModul()" color="white" style=" zoom:1.25">
+      <ion-icon name="duplicate-outline" color="dark"></ion-icon>
+    </ion-button>
   </div>
 <!--Lista de objetos de tipo modulo que al seleccionar un "ion-item" se abra un modal con el contenido de RA que se da en este modulo en concreto-->
   <ion-list lines="inset">
