--- a/src/app/pages/ce-module-edit/ce-module-edit.page.html
+++ b/src/app/pages/ce-module-edit/ce-module-edit.page.html
@@ -28,7 +28,7 @@
         </ion-col>  
         <ion-col style="text-align: right;">
           <ion-button shape="round" color="success" type="submit"
-            [disabled]="this.formModulo.pristine">Guardar</ion-button>
+            [disabled]="this.formModulo.valid">Guardar</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
