--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -2,8 +2,14 @@
     margin-top: 18px;
 }
 
-.icon {
-    height: 3px;
-    width: 2px;
-    margin-right: 1px;
+.image{
+    width: 100px; /* ancho deseado */
+    height: 100px; /* altura deseada */
+    mask-image: radial-gradient(circle, white 100%, transparent 100%,); /* crea una máscara circular */
+  }
+  
+.icn{
+    width: 100px; /* ancho deseado */
+    height: 100px; /* altura deseada */
+    mask-image: radial-gradient(circle, white 100%, transparent 100%,); /* crea una máscara circular */
 }
