--- a/src/app/tabs_centrosEducativo/tabs.page.html
+++ b/src/app/tabs_centrosEducativo/tabs.page.html
@@ -1,3 +1,4 @@
+<!--
 <ion-app>
   <ion-menu menuId="main-menu" contentId="main">
     <ion-content>
@@ -29,7 +30,6 @@
           <ion-icon name="briefcase-outline"></ion-icon>
           <p>Ciclo Formativo</p>
         </ion-item>
-
         <ion-item [class.active]="activeTab === 'periodopracticas'" tab="periodopracticas" button detail="true" (click)="redirectTo('periodopracticas')"
           (click)="clMenu()">
           <ion-icon name="color-palette-outline"></ion-icon>
@@ -40,25 +40,54 @@
   </ion-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
-<!--
-<ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="empresa">
-      <ion-icon name="calendar-outline"></ion-icon>
-      <ion-label>Empresa</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="alumno">
-      <ion-icon name="school"></ion-icon>
-      <ion-label>Alumno</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="titulo">
-      <ion-icon name="briefcase-outline"></ion-icon>
-      <ion-label>Ciclo Formativo</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="periodopracticas">
-      <ion-icon name="color-palette-outline"></ion-icon>
-      <ion-label>Practicas</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-</ion-tabs>
 -->
+<ion-app>
+  <ion-menu menuId="main-menu" contentId="main">
+    <ion-content>
+      <div class="menu-header-bg"></div>
+      <div class="header-content">
+        <ion-icon *ngIf="this.img==null" name="person-outline" style="zoom:4" color="light" (click)="editAvatar()"></ion-icon>
+        <img *ngIf="this.img!=null" [src]="img" alt="" (click)="editAvatar()">
+        <ion-label>
+          <h2>{{name}}</h2>
+          <p>{{subtittle}}</p>
+        </ion-label>
+      </div>
+      <ion-list class="menu-item" lines="none">
+        <ion-item [class.active]="activeTab === 'empresa'" tab="empresa" button detail="true" (click)="redirectTo('empresa')" (click)="clMenu()">
+          <ion-icon name="calendar-outline"></ion-icon>
+          <p>Empresa</p>
+        </ion-item>
+        <ion-item [class.active]="activeTab === 'alumno'" tab="alumno" button detail="true" (click)="redirectTo('alumno')" (click)="clMenu()">
+          <ion-icon name="school"></ion-icon>
+          <p>Alumno </p>
+        </ion-item>
+        <ion-item [class.active]="activeTab === 'titulo'" tab="titulo" button detail="true" (click)="redirectTo('titulo')" (click)="clMenu()">
+          <ion-icon name="briefcase-outline"></ion-icon>
+          <p>Ciclo Formativo</p>
+        </ion-item>
+        <ion-item [class.active]="activeTab === 'periodopracticas'" tab="periodopracticas" button detail="true" (click)="redirectTo('periodopracticas')"
+          (click)="clMenu()">
+          <ion-icon name="color-palette-outline"></ion-icon>
+          <p> Practicas</p>
+        </ion-item>
+      </ion-list>
+      <ion-list class="content-wrapper">
+        <div class="content-item">
+          <ion-item>
+            <ion-label>Dark Mode&nbsp;&nbsp;&nbsp;</ion-label>
+            <ion-icon name="sunny-outline"></ion-icon>
+            <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="cambio()"></ion-toggle>
+            <ion-icon slot="end" name="moon"></ion-icon>
+          </ion-item>
+        </div>
+        <div class="content-item">
+          <ion-button slot="start" (click)="cerrarSesion()">Cerrar Sesión
+            <ion-icon slot="end" name="exit"></ion-icon>
+          </ion-button>
+        </div>
+    </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
+</ion-app>
